fix investment card width on mobile

--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_investment-card.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_investment-card.sass
@@ -4,6 +4,8 @@
 .investment-card-container
     margin-top: 30px
     counter-reset: section
+    @include breakpoint(desktop, down)
+        overflow: hidden
     h3
         margin-bottom: -1rem
     @include breakpoint(desktop, up)
